# decentralized-gpu-p2p-network

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml  start.sh  stop.sh  worker.sh
.cargo/: config.toml
.sqlx/: query-0200ba9c230eaf045de45f4f2e3bec7bf69855f5cdfdd88ce1d556b27efeddbb.json  query-03df36644f17b82737414ff41023ca7292e1a69bb646faabc7a736f8cdb053fa.json  query-16006f82b9b7e399abbd2b75fb014ee98502fc06ba7e6ab558e0d0e4e4deeea0.json  query-20d7694f8094bcf15f229d0af0c2c780bdd864b6356f0d790d9189fcd22a55f5.json  query-2329c2b188f8ad0f48cc4361a851d758e1b51a7aa58db948c21b027bb2cc0c65.json  query-3d73c3f6e832cb4e3b8fd2c849e677ddf870b0ea56d5c11b116ddbb2397bf5a6.json  query-3d925eafbc704dcbc6e52104b2969dbfe9f46309e54bd7ef54595ba042c19731.json  query-44d6fe1d0662a160b1604e405317f64f4eadda8580632cd467f2d67f633e6403.json  query-4635445901d89f096188026c9f5411cd8e0ddbb0bd2efd933b12e9a67aa46476.json  query-616c99d040fa82408c2b0ed5d00ffc3fe7cfcee63fbe3f0687910a885de89883.json  query-6645ff67c1dbb174c7202479bca963fbf66435be91f97fd498ddea91307326a0.json  query-7334cb45038f4dab444de55a64ea039eb68f33a2fab5b0f8801b5974af68c574.json  query-733d1c597ec30037687e3720389c4addfd11ea4809f86ad308a24bc6f0d2972b.json  query-7c9018f490c8169d548e1a0cdf0da22f59b8206ef371cf9218a11c0e9a1d1584.json  query-7f452fcd340641a84cdc251c78b546d8b6aeecc19adb5247a3ea6bef449f89a4.json  query-8109c7ceb5bb6063e51a42731422c996587207aa273d204e753f3164bf75c527.json  query-8a43c71168d98a3c2df6613e601841a7cb5c809433777a0d36b496c62de8117f.json  query-8f73f8c04bd7e2b8b3d397352f23d763459f79d2acedb4ef6ea84a554a9a87c0.json  query-9d0fac8ba99d75ea301df3dfc99c0abe9e8d6b35ff6e45b4010ffb3021ae0699.json  query-a15a8457d0cbb839d98c291d9cff83269c05637ffaaef3c89fed2fa4fd8ef017.json  query-a4feaf7c99b356fac8dfd5953b5c31222d906f58be541db34279580be04eb937.json  query-a7b1c982cf0128cf8a881e1d01ab139203c02a2ad243371394d8d5af3c254db8.json  query-aa23bcdbc3320d126d559dad700fc21bc55241689bc99dcf19b3bdddaf202f76.json  query-b55aa773a573161f616a79a060aba1df7e615330cd0b38f87dbb814284c93013.json  query-b921816da8e2d05dbb4c35b7baa2422035373fab1acd2b1d6a463652ceee00db.json  query-c420da22c91815d12ab24e8e8744a93f84021b9dbd6a0a81bbf3e9221c4aab03.json  query-c57cc2d6d2605931cb33587c65eea7e9d03194866eb5cd40dccca41cbdfe7c41.json  query-db6ad3f684af82d0ab0816693ac31c3ce214a7f88a71b4d1199a4c46b9ebd981.json  query-dda4114ce3d721f2737587e7f2ccae97923685ce6959e9bfe488ac028cb1d31c.json  query-e00f78e5ee6e1684e355357b21efd6e4e0aaf14b96177b428de813673d5da823.json  query-e46a6aa00308c7a46fb7f3173e0a984f971364a225625bcfcd33084408c1489b.json  query-eb08bf762ae6f6262cca433f89d1fccf391dd66597e73bebaa051f9284b1dac7.json  query-f0c8cb6950eb43e40fc6b5c2208d1e2e25c49d88a84075d804442843d1144a9e.json  query-f8a7de075f8ec8791b7f53d6494931d0c97e10f4449d323d0ec8f2dbad6dec02.json  query-fb9232ed1ba5395bef39de5466752f4f2ab806e0a592b65d05036ca9690ec54a.json
crates/decentgpu-bootstrap/: Cargo.toml
crates/decentgpu-bootstrap/src/: behaviour.rs  main.rs
crates/decentgpu-common/: Cargo.toml
crates/decentgpu-common/src/: config.rs  error.rs  keypair.rs  lib.rs  transfer.rs  types.rs
crates/decentgpu-master/: Cargo.toml
crates/decentgpu-master/src/: lib.rs  main.rs
crates/decentgpu-master/src/api/: admin.rs  auth.rs  credits.rs  downloads.rs  jobs.rs  logs.rs  mod.rs  router.rs  terminal.rs  workers.rs
crates/decentgpu-master/src/credits/: engine.rs  mod.rs
crates/decentgpu-master/src/db/: compute_units.rs  credits.rs  jobs.rs  mod.rs  users.rs  workers.rs
crates/decentgpu-master/src/db/migrations/: 001_users.sql  002_credits.sql  003_workers.sql  004_jobs.sql  005_compute_units.sql  006_admin_role.sql
crates/decentgpu-master/src/docker/: builder.rs  mod.rs
crates/decentgpu-master/src/p2p/: behaviour.rs  handler.rs  mod.rs  protocols.rs
crates/decentgpu-master/src/scheduler/: matcher.rs  mod.rs
crates/decentgpu-master/tests/: api_integration.rs  integration.rs
crates/decentgpu-proto/: Cargo.toml  build.rs
crates/decentgpu-proto/proto/: messages.proto
crates/decentgpu-proto/src/: decentgpu.rs  lib.rs
crates/decentgpu-worker/: Cargo.toml
crates/decentgpu-worker/src/: main.rs
crates/decentgpu-worker/src/docker/: builder.rs  cleanup.rs  manager.rs  mod.rs
crates/decentgpu-worker/src/executor/: mod.rs  netns.rs  runner.rs  streams.rs
crates/decentgpu-worker/src/gpu/: detector.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/decentgpu-worker/src/p2p/: behaviour.rs  handler.rs  mod.rs
deploy/: .env.prod.example  COOLIFY_SETUP.md  Dockerfile.bootstrap  Dockerfile.frontend  Dockerfile.master  Dockerfile.nginx  docker-compose.dev.yml  docker-compose.prod.yml  init-bootstrap-id.sh  nginx.prod.conf
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(panel)/: layout.tsx
frontend/src/app/(panel)/account/: page.tsx
frontend/src/app/(panel)/admin/: layout.tsx  page.tsx
frontend/src/app/(panel)/compute-units/: page.tsx
frontend/src/app/(panel)/dashboard/: page.tsx
frontend/src/app/(panel)/editor/: page.tsx
frontend/src/app/(panel)/jobs/: page.tsx
frontend/src/app/(panel)/rent/: page.tsx
frontend/src/app/(panel)/worker-dashboard/: page.tsx
frontend/src/components/admin/: AllocateCUModal.tsx  UserTable.tsx
frontend/src/components/jobs/: JobStatusBadge.tsx  Terminal.tsx
frontend/src/components/layout/: Header.tsx  MobileNav.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Toast.tsx
frontend/src/components/workers/: WorkerCard.tsx  WorkerFilterBar.tsx
frontend/src/lib/: api.ts  auth.ts  constants.ts  utils.ts
frontend/src/types/: index.ts
(+4 files in other folders)
