[workspace]
members = [
    "crates/decentgpu-proto",
    "crates/decentgpu-common",
    "crates/decentgpu-bootstrap",
    "crates/decentgpu-master",
    "crates/decentgpu-worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DecentGPU Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "websocket",
    "kad",
    "rendezvous",
    "relay",
    "autonat",
    "dcutr",
    "identify",
    "ping",
    "gossipsub",
    "request-response",
    "macros",
    "dns",
    "websocket",
    "tls",
] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
dashmap = "6"

# HTTP/WebSocket
axum = { version = "0.7", features = ["multipart", "ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Docker
bollard = "0.17"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Socket.io
socketioxide = { version = "0.14" }

[workspace.metadata.scripts]
db-setup = "sqlx database create && sqlx migrate run --source crates/decentgpu-master/src/db/migrations"
db-prepare = "cargo sqlx prepare --workspace"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
