[package]
name = "decentgpu-common"
version.workspace = true
edition.workspace = true

[dependencies]
decentgpu-proto = { path = "../decentgpu-proto" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
